--- a/ppt2.tex
+++ b/ppt2.tex
@@ -23,8 +23,8 @@
 %\author[Runzi Qin]
 \begin{document}
 \begin{frame}
-\title{Pretend to have a caption}
-\subtitle{-----From a Economic Perspective}
+\title{The Fall of Hong Kong's Economy}
+\subtitle{-----The Analysis of Reasons Behind}
 \author{Runzi Qin\\   Hongmei Huang\\   Wanyun Hu\\ Jianing Zhang}
 \institute{Shandong University}
 \titlepage
@@ -36,17 +36,72 @@
 \frametitle{Roadmap}
 \begin{itemize}
 \item Introduction
+\item Internal cause
 \item External cause
 \begin{enumerate}
 \item  Return of Hong Kong
 \item  Economic crisis
 \item  The rise of mainland China
 \end{enumerate}
-\item Internal cause
+
 \item  Conclusion
 \end{itemize}
 \end{frame}
-\section{External cause}
+\section{Internal causes}
+\subsection{competitive}
+\begin{frame}
+
+\title{The Economic Competitiveness of Hong Kong}
+\date{}
+\titlepage
+\end{frame}
+\begin{frame}
+\frametitle{The Economic Competitiveness of Hong Kong}
+\begin{figure}[h]
+\raggedleft
+\includegraphics[width=1.1\textwidth]{hk4.jpg}
+\label{threadsVsSync}
+\end{figure}
+\end{frame}
+
+\begin{frame}
+\frametitle{The Economic Competitiveness of Hong Kong}%[shrink]
+The financial market of Hong Kong
+And according to Levine (2000) and Arestis (1997), we use the M2/GDP, Loan/M2, Stock market value/GDP to present the competitiveness of Hong Kong financial market.\\
+\begin{overprint}
+\onslide<1>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk10.png}
+\label{threadsVsSync}
+\end{figure}
+\onslide<2>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk11.png}
+\label{threadsVsSync}
+\end{figure}
+\onslide<3>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk12.png}
+\label{threadsVsSync}
+\end{figure}
+\end{overprint}
+\end{frame}
+\begin{frame}
+\frametitle{The Economic Competitiveness of Hong Kong}
+Trade and logistics of Hong Kong\\
+\begin{figure}[h]
+\includegraphics[width=0.6\textwidth]{hk13.png}
+\label{threadsVsSync}
+\end{figure}
+\begin{figure}[h]
+\includegraphics[width=0.6\textwidth]{hk14.png}
+\label{threadsVsSync}
+\end{figure}
+\end{frame}
+\section{External causes}
 \subsection{azi}
 \begin{frame}
 \title{Return to Hong Kong}
@@ -128,7 +183,7 @@ Different economic circumstance
 \frametitle{The Influence of Economic Crisis on Hong Kong 
 }
 \begin{itemize}
-\item Background
+\item Back	ground
 \bigskip
 \item Data
 \bigskip
@@ -143,7 +198,7 @@ Different economic circumstance
 Background\\
 \bigskip
 \transglitter[direction=315]
-On July 2, 1997, Thailand gave up Fixed Exchange Rates, having influence on some countries in Asia.\\
+On July 2, 1997, Thailand gave up Fixed Exchange Rates which marked the beginning of Financial Crisis.\\
 \end{frame}
 \begin{frame}
 \frametitle{The Influence of Economic Crisis on Hong Kong }
@@ -214,11 +269,9 @@ Explanation\\
 \begin{enumerate}[i]
 \pause\item Thailand gave up Fixed Exchange Rates causing foreign exchange market chaotic.
 \bigskip
-\pause\item International speculators began to “attack” Hong Kong in October 1997 and another “attack” in August 1998.
+\pause\item International speculators had two “attacks” in Hong Kong.
 \bigskip
-\pause\item In reaction, government must increase interest rate which makes the stock market sharply fall. In addition, they sell foreign exchange reserve to stablize the exchange rate causing it decrease.
-\bigskip
-\pause\item A panic appeared in Financial market, causing less investment.
+\pause\item A panic  in Financial market, and less investment.
 \end{enumerate}
 
 \end{frame}
@@ -232,9 +285,9 @@ Explanation\\
 \begin{enumerate}[I]
 \item <+-| alert@+> Subprime crisis. 
 \bigskip
-\item <+-| alert@+> Panic in the market, causing currency less liquid. The world economy came into recession.
+\item <+-| alert@+> Banks are less willing to lend. The world economy came into recession.
 \bigskip
-\item <+-| alert@+> Hong Kong being a part of economy can't escape. 
+\item <+-| alert@+> Hong Kong being a part of world economy can't escape. 
 
 \bigskip
 
@@ -246,8 +299,8 @@ Explanation\\
 \date{}
 \titlepage
 \end{frame}
-\begin{frame}{The Rise of Chinese Economy}
-Roadmap\\
+\begin{frame}{The rise of China's Economy}
+Structure\\
 \begin{itemize}
 \item Hong Kong's special economic status for China\\
 \item The Rise of China's economy\\
@@ -257,22 +310,21 @@ Roadmap\\
 
 \end{frame}
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
+\frametitle{The rise of China's Economy}
 The Special Economic Status of Hong Kong\\
 \bigskip
-\animate<1-4>%
+\animate<1-3>%
 \begin{itemize}[<+->]
 \item The leading economic zone: “Dragon's Head”.
 \item The mediation role on investment, capital introduction and the processing trade.
 \item The financial center: provide offshore financial services.
-\item The political reason.
 \end{itemize}
 \pause
 \end{frame}
 
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
-The reason of the Special Status\\
+\frametitle{The rise of China's Economy}
+The Reasons of the Special Status\\
 \bigskip
 \begin{enumerate}[A]
 \item The high economic density.
@@ -280,12 +332,14 @@ The reason of the Special Status\\
 \item The close economic relationship.
 \bigskip
 \item The multiple advantages of Hong Kong's economy.
+\bigskip
+\item The political reason.
 \end{enumerate}
 \end{frame}
 
 \subsection{High Density}
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
+\frametitle{The rise of China's Economy}
 The High Economic Density\\
 \bigskip
 \bigskip
@@ -294,11 +348,11 @@ The High Economic Density\\
 \includegraphics[width=1\textwidth]{hk5.jpg}
 \label{threadsVsSync}
 \end{figure}
-\flushright{Shanghai \$$3000$}
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Shanghai \$$3000$
 \end{frame}
 
 \subsection{close relationship}
-\begin{frame}{The Rise of Chinese Economy}
+\begin{frame}{The rise of China's Economy}
 The Close Economic Relationship\\
 \bigskip
 The economic return runs before the political return. \\
@@ -321,23 +375,22 @@ Case: In 1980s,  the north movement of manufacture industries contributed to the
 \end{frame}
 
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
-Advantages of Hong Kong's Economic\\
+\frametitle{The rise of China's Economy}
+Advantages of Hong Kong's Economic System\\
 \bigskip
 \begin{enumerate}
 \item The complete economic policy system.
 \bigskip
 \item The high economic freedom.
 \bigskip
-\item The service industry-dominated structure.
+\item The prosperity of finance, information, transportation, international trade.
 \bigskip 
-The prosperity of finance, information, transportation, international trade.
 \end{enumerate}
 
 \end{frame}
 \subsection{Rise}
 \begin{frame}
-\frametitle{The Impact of The Rise of China's Economy on Hong Kong's Economic Status}
+\frametitle{The rise of China's Economy}
 The rise of China's Economy\\
 An economic miracle.\\
 \bigskip
@@ -351,7 +404,7 @@ An economic miracle.\\
 
 
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
+\frametitle{The rise of China's Economy}
 The rise of economic zones like Beijing, Shanghai and    Shenzhen. \\
 \begin{figure}[h!]
 \centering
@@ -359,7 +412,7 @@ The rise of economic zones like Beijing, Shanghai and    Shenzhen. \\
 \label{threadsVsSync}
 \end{figure}
 \end{frame}
-\begin{frame}{The Rise of Chinese Economy}
+\begin{frame}{The rise of China's Economy}
 The impact on Hong Kong's economic status\\
 \bigskip
 From the perspective of the background of Hong Kong's rise\\
@@ -373,7 +426,7 @@ The economic autarky situation, the planned economy
 $\Longrightarrow$ The more open economy, the maket economy.\\
 \bigskip
 \bigskip
-The lack of bridge between China and foreign coutries
+The lack of bridge between China and foreign countries
 $\Longrightarrow$ The second largest international trade country.\\
  
 
@@ -382,120 +435,38 @@ $\Longrightarrow$ The second largest international trade country.\\
 \end{frame}
 \subsection{The impact on Hong Kong's economic status}
 \begin{frame}
-\frametitle{The Rise of Chinese Economy}
-The impact on Hong Kong's economic status\\
+\frametitle{The rise of China's Economy}
+\textcolor{red}{The impact on Hong Kong's economic status}\\
 \bigskip
 From the perspective of the institutinal reasons\\
+
 \bigskip
-Government's policy change.\\
+\begin{itemize}
+\item Government's policy change.
 \bigskip
-Political institutional contradiction.\\
+\item Political institutional contradiction.
 \bigskip
-Different economy system on tax, trade, accounting policy.
+\item Different economy system on tax, trade, accounting policy.
+\end{itemize}
+
 \end{frame}
-\begin{frame}
-\frametitle{The Rise of Chinese Economy}
-The impact on Hong Kong's economic status\\
-\bigskip
-From the perspective of the institutinal reasons\\
-\bigskip
-Government's policy change.\\
-\bigskip
-Political institutional contradiction.\\
-\bigskip
-Different economy system on tax, trade, accounting policy.
-\end{frame}
-\begin{frame}{The Rise of Chinese Economy}
+
+\begin{frame}{The rise of China's Economy}
 
 \transwipe<1>
-The impact on Hong Kong's economic status\\
+\textcolor{red}{The impact on Hong Kong's economic status}\\
 \bigskip
 From the perspective of the cultural reasons.\\
 \bigskip
-The Hong Kong’s native consciousness.\\
+\begin{itemize}
+\item The Hong Kong’s native consciousness.
 \bigskip
-The worship of British.\\
+\item The missing of British.
+\end{itemize}
+
 
 \end{frame}
-\section{Internal cause}
-\subsection{competitive}
-\begin{frame}
 
-\title{The Economic Competitiveness of Hong Kong}
-\date{}
-\titlepage
-\end{frame}
-\begin{frame}
-\frametitle{The Economic Competitiveness of Hong Kong}
-\transdissolve<1>
-a.The competitiveness ranking of Hong Kong
-We referenced the Global Competitiveness Report produced by World Economic Forum, and figured the competitiveness ranking of Hong Kong.
-\\
-
-\begin{figure}[h]
-\raggedleft
-\includegraphics[width=1.1\textwidth]{hk4.jpg}
-\label{threadsVsSync}
-\end{figure}
-\end{frame}
-\begin{frame}[shrink]
-\frametitle{The Economic Competitiveness of Hong Kong}
-b.  The economic position of Hong Kong in the Chinese economic territory
-It can be seen that the economic position of Hong Kong is relatively decreasing in the Chinese economic territory. And the economic competitiveness of Hong Kong is also relatively decreasing.\\
-\begin{figure}[h]
-\raggedleft
-\includegraphics[width=0.6\textwidth]{hk9.png}
-\label{threadsVsSync}
-\end{figure}
-%\begin{table}[htbp]
- 
-%\begin{tabular}{ccccc} 
-%\hline
- %&1%$^{st}$ Stage&2$^{st}$ Stage&$\cdots$&4$^{st}$ %Stage\\ \hline  % \hline
- %&TianTang Song &Qiaoling Zhang
-%5& &Ultimate Buyer\\    \hline      
-%Price &3,000RMB &7000RMB & &14,000RMB\\        \hline
-%\end{tabular}
-%\caption{Trade for the last victim: Gaizhen Wang}
-%\end{table}
-\end{frame}
-\begin{frame}
-\frametitle{The Economic Competitiveness of Hong Kong}%[shrink]
-c. The financial market of Hong Kong
-And according to Levine (2000) and Arestis (1997), we use the M2/GDP, Loan/M2, Stock market value/GDP to present the competitiveness of Hong Kong financial market.\\
-\begin{overprint}
-\onslide<1>
-\begin{figure}[h]
-\centering
-\includegraphics[width=1\textwidth]{hk10.png}
-\label{threadsVsSync}
-\end{figure}
-\onslide<2>
-\begin{figure}[h]
-\centering
-\includegraphics[width=1\textwidth]{hk11.png}
-\label{threadsVsSync}
-\end{figure}
-\onslide<3>
-\begin{figure}[h]
-\centering
-\includegraphics[width=1\textwidth]{hk12.png}
-\label{threadsVsSync}
-\end{figure}
-\end{overprint}
-\end{frame}
-\begin{frame}
-\frametitle{The Economic Competitiveness of Hong Kong}
-d.  Trade and logistics of Hong Kong\\
-\begin{figure}[h]
-\includegraphics[width=0.6\textwidth]{hk13.png}
-\label{threadsVsSync}
-\end{figure}
-\begin{figure}[h]
-\includegraphics[width=0.6\textwidth]{hk14.png}
-\label{threadsVsSync}
-\end{figure}
-\end{frame}
 \section{Conclusion}
 \begin{frame}{Conclusion}
 
@@ -515,9 +486,9 @@ Pretend to have a conclusion.
 \bigskip
 \bigskip
 \bigskip
-\bigskip
 
-\center{$\mathcal{THANK}$}\\ 
-\center{$\mathcal{YOU}$}
+
+\center{Thank}\\ 
+\center{YOU}
 \end{frame}
 \end{document}
