--- a/ppt2.tex
+++ b/ppt2.tex
@@ -47,6 +47,21 @@
 \item  Conclusion
 \end{itemize}
 \end{frame}
+\section{Introduction}
+\subsection{intro}
+\begin{frame}{Introduction}
+Became a colony $\Longrightarrow$
+ Mainly transit trade $\Longrightarrow$
+ Industrial city $\Longrightarrow$
+ Diversification\\
+\bigskip
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.6\textwidth]{hk16.jpg}
+\label{threadsVsSync}
+\caption{Hong Kong map}
+\end{figure}
+\end{frame}
 \section{Internal causes}
 \subsection{competitive}
 \begin{frame}
@@ -57,59 +72,101 @@
 \end{frame}
 \begin{frame}
 \frametitle{The Economic Competitiveness of Hong Kong}
-\begin{figure}[h]
-\raggedleft
-\includegraphics[width=1.1\textwidth]{hk4.jpg}
-\label{threadsVsSync}
-\end{figure}
-\end{frame}
-
-\begin{frame}
-\frametitle{The Economic Competitiveness of Hong Kong}%[shrink]
-The financial market of Hong Kong
-And according to Levine (2000) and Arestis (1997), we use the M2/GDP, Loan/M2, Stock market value/GDP to present the competitiveness of Hong Kong financial market.\\
+\textcolor{red}{a. The competitiveness analysis of Hong Kong}\\
 \begin{overprint}
 \onslide<1>
 \begin{figure}[h]
 \centering
-\includegraphics[width=1\textwidth]{hk10.png}
+\includegraphics[width=1.1\textwidth]{hk4.jpg}
 \label{threadsVsSync}
 \end{figure}
 \onslide<2>
 \begin{figure}[h]
 \centering
-\includegraphics[width=1\textwidth]{hk11.png}
+\includegraphics[width=0.5\textwidth]{hk17.png}
+\label{threadsVsSync}
+\end{figure}
+\end{overprint}
+\end{frame}
+
+\begin{frame}
+\frametitle{The Economic Competitiveness of Hong Kong}%[shrink]
+\textcolor{red}{b. The financial market of Hong Kong}\\
+And according to Levine (2000) and Arestis (1997), we use the M2/GDP, Loan/M2, Stock market value/GDP to present the competitiveness of Hong Kong financial market.\\
+\begin{overprint}
+\onslide<1>
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{hk10.png}
+\label{threadsVsSync}
+\end{figure}
+\onslide<2>
+\begin{figure}[h]
+\centering
+\includegraphics[width=0.8\textwidth]{hk11.png}
 \label{threadsVsSync}
 \end{figure}
 \onslide<3>
 \begin{figure}[h]
 \centering
-\includegraphics[width=1\textwidth]{hk12.png}
+\includegraphics[width=0.8\textwidth]{hk12.png}
 \label{threadsVsSync}
 \end{figure}
 \end{overprint}
 \end{frame}
 \begin{frame}
 \frametitle{The Economic Competitiveness of Hong Kong}
-Trade and logistics of Hong Kong\\
+\textcolor{red}{c. The real estate market saturation of Hong Kong}
+\begin{overprint}
+\onslide<1>
 \begin{figure}[h]
-\includegraphics[width=0.6\textwidth]{hk13.png}
+\centering
+\includegraphics[width=0.8\textwidth]{hk18.png}
 \label{threadsVsSync}
 \end{figure}
+\onslide<2>
 \begin{figure}[h]
-\includegraphics[width=0.6\textwidth]{hk14.png}
+\centering
+\includegraphics[width=1\textwidth]{hk19.png}
 \label{threadsVsSync}
 \end{figure}
+\onslide<3>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk20.png}
+\label{threadsVsSync}
+\end{figure}
+\end{overprint}
+\end{frame}
+\begin{frame}{The Economic Competitiveness of Hong Kong}
+\textcolor{red}{d. The science and technology competitivness of Hong Kong}\\
+\bigskip
+Higher education and training ranks 24.
+~~Innovation ranks 26 \\
+\begin{overprint}
+\onslide<1>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk21.png}
+\label{threadsVsSync}
+\end{figure}
+\onslide<2>
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk22.png}
+\label{threadsVsSync}
+\end{figure}
+\end{overprint}
 \end{frame}
 \section{External causes}
 \subsection{azi}
 \begin{frame}
-\title{Return to Hong Kong}
+\title{Return of Hong Kong}
 \date{}
 \titlepage
 \end{frame}
 \begin{frame}
-\frametitle{Return to Hong Kong}
+\frametitle{Return of Hong Kong}
 \begin{itemize}
 \item<2-> \alt<2>{\color{blue} Brain drain and capital flight
 }{\color{gray} Brain drain and capital flight
@@ -122,7 +179,7 @@ Trade and logistics of Hong Kong\\
 \end{frame}
 \subsection{sdlkfj}
 \begin{frame}
-\frametitle{Return to Hong Kong}
+\frametitle{Return of Hong Kong}
 Brain Drain and Capital Flight\\
 \begin{definition}
 \textcolor{cyan}{Brain drain}: a mass emigration of technically skilled people from a country or a region to another country. \\
@@ -138,7 +195,7 @@ Brain Drain and Capital Flight\\
 \label{threadsVsSync}
 \end{figure}
 \end{frame}
-\begin{frame}{Return to Hong Kong}
+\begin{frame}{Return of Hong Kong}
  Why?
 \begin{enumerate}
 \item Uncertainty.
@@ -147,30 +204,32 @@ Brain Drain and Capital Flight\\
 \end{enumerate}
 \end{frame}
 \begin{frame}
-\frametitle{Return to Hong Kong}
+\frametitle{Return of Hong Kong}
 Brain Drain $\Longrightarrow$ Capital Flight
 \setbeamercolor{uppercol}{fg=white,bg=blue}%
 \setbeamercolor{lowercol}{fg=black,bg=white}%
 \begin{beamerboxesrounded}[upper=uppercol,lower=lower col,shadow=true]{Process}
-Many capitalists transferred their capital to other countries to avoid the uncertain of Hong Kong and people who emigrated brought their fortune abroad.\\
+Many capitalists transferred their capital to other countries to avoid the uncertainty of Hong Kong and people who emigrated brought their fortune abroad.\\
 \end{beamerboxesrounded}
 \end{frame}
-\begin{frame}{Return to Hong Kong}
+\begin{frame}{Return of Hong Kong}
 Effect
 \begin{block}{}
-\center{$Y=A \cdot K^a \cdot (EL)^{1-a}$}
+\center{$Y=A \cdot K^a \cdot L^{1-a}$}
 \center{$\Downarrow$\\
 \bigskip	Economic Downturn}
 \end{block}
 \end{frame}
-\begin{frame}{Return to Hong Kong}
-Conflict between Hong Kong and Mainland\\
+\begin{frame}{Return of Hong Kong}
+Confliction between Hong Kong and Mainland\\
+\begin{itemize}
+\bigskip
+\item Institutional difference.
 \bigskip
 \bigskip
-Institutional difference.\\
-\bigskip
-\bigskip
-Different economic circumstance 
+\item Different economic circumstance 
+\end{itemize}
+
 
 \end{frame}
 \subsection{Overview}
@@ -179,18 +238,18 @@ Different economic circumstance
 \date{}
 \titlepage
 \end{frame}
-\begin{frame}[shrink]
+\begin{frame}
 \frametitle{The Influence of Economic Crisis on Hong Kong 
 }
 \begin{itemize}
-\item Back	ground
+\item Back ground
 \bigskip
 \item Data
 \bigskip
 \item Explanation
 \end{itemize}
 \end{frame}
-\pageTransitionSplitVI
+
 \subsection{Background}
 \begin{frame}
 
@@ -204,12 +263,13 @@ On July 2, 1997, Thailand gave up Fixed Exchange Rates which marked the beginnin
 \frametitle{The Influence of Economic Crisis on Hong Kong }
 Background\\
 \bigskip
-On July 2, 1997, Thailand gave up Fixed Exchange Rates, having influence on some countries in Asia.\\
+On July 2, 1997, Thailand gave up Fixed Exchange Rates which marked the beginning of Financial Crisis.\\
 \bigskip
 \transboxin<1>
-From August 2007, Subprime mortgage crisis spreaded to the whole world which resulted from lending too much to those who are poor in credit.\\
+In 2008, Subprime mortgage crisis in America spread to the whole world which resulted from lending too much to those in poor credit.
+\\
 \bigskip
-Do they have influence on Hong Kong? Of course yes.
+Do they have influence on Hong Kong? 
 \end{frame}
 \subsection{data}
 \begin{frame}
@@ -253,7 +313,7 @@ GDP growth rate from 1995 to 2011 in Hong Kong.\\
 \bigskip
 \begin{figure}[h]
 \raggedleft
-\includegraphics[width=1\textwidth]{hk3.jpg}
+\includegraphics[width=0.9\textwidth]{hk23.png}
 \caption{GDP growth rate}
 \label{threadsVsSync}
 \end{figure}
@@ -267,11 +327,11 @@ Explanation\\
 \bigskip
 
 \begin{enumerate}[i]
-\pause\item Thailand gave up Fixed Exchange Rates causing foreign exchange market chaotic.
+\pause\item International speculators have two “attacks” in Hong Kong.
 \bigskip
-\pause\item International speculators had two “attacks” in Hong Kong.
+\pause\item Use USD to change for Hong Kong dollar, increase exchange rate, change back.
 \bigskip
-\pause\item A panic  in Financial market, and less investment.
+\pause\item A panic in Financial market and less investment, less GDP.
 \end{enumerate}
 
 \end{frame}
@@ -283,11 +343,14 @@ Explanation\\
 \alert{Financial Crisis in 1997}
 \bigskip
 \begin{enumerate}[I]
-\item <+-| alert@+> Subprime crisis. 
+\item <+-| alert@+> The poor credit borrow money to buy houses.
+
 \bigskip
-\item <+-| alert@+> Banks are less willing to lend. The world economy came into recession.
+\item <+-| alert@+> Price of houses falls. Unable to pay back.
+
 \bigskip
-\item <+-| alert@+> Hong Kong being a part of world economy can't escape. 
+\item <+-| alert@+> Banks are less willing to lend. World economy came into recession.
+
 
 \bigskip
 
@@ -295,7 +358,7 @@ Explanation\\
 \end{frame}
 \subsection{Huang}
 \begin{frame}
-\title {The Impact of The Rise of China's Economy on Hong Kong's Economic Status}
+\title {The Rise of China's Economy on Hong Kong's Economic Status}
 \date{}
 \titlepage
 \end{frame}
@@ -303,7 +366,7 @@ Explanation\\
 Structure\\
 \begin{itemize}
 \item Hong Kong's special economic status for China\\
-\item The Rise of China's economy\\
+\item The rise of China's economy\\
 \item The impact on Hong Kong's economic status\\
 
 \end{itemize}
@@ -315,53 +378,27 @@ The Special Economic Status of Hong Kong\\
 \bigskip
 \animate<1-3>%
 \begin{itemize}[<+->]
-\item The leading economic zone: “Dragon's Head”.
+\item The leading economic zone: “ Dragon's Head ”.
 \item The mediation role on investment, capital introduction and the processing trade.
 \item The financial center: provide offshore financial services.
 \end{itemize}
 \pause
 \end{frame}
 
-\begin{frame}
-\frametitle{The rise of China's Economy}
-The Reasons of the Special Status\\
-\bigskip
-\begin{enumerate}[A]
-\item The high economic density.
-\bigskip
-\item The close economic relationship.
-\bigskip
-\item The multiple advantages of Hong Kong's economy.
-\bigskip
-\item The political reason.
-\end{enumerate}
-\end{frame}
 
-\subsection{High Density}
-\begin{frame}
-\frametitle{The rise of China's Economy}
-The High Economic Density\\
-\bigskip
-\bigskip
-\begin{figure}[h]
-\raggedleft
-\includegraphics[width=1\textwidth]{hk5.jpg}
-\label{threadsVsSync}
-\end{figure}
-~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Shanghai \$$3000$
-\end{frame}
+
+
 
 \subsection{close relationship}
 \begin{frame}{The rise of China's Economy}
 The Close Economic Relationship\\
 \bigskip
-The economic return runs before the political return. \\
 \begin{overprint}
 \onslide<1>
-
+The economic return runs before the political return.\\
 \begin{figure}[h!]
 \centering
-\includegraphics[width=1.05\textwidth]{hk6.jpg}
+\includegraphics[width=0.9\textwidth]{hk6.jpg}
 \label{threadsVsSync}
 \end{figure}
 \onslide<2>
@@ -374,20 +411,7 @@ Case: In 1980s,  the north movement of manufacture industries contributed to the
 \end{overprint}
 \end{frame}
 
-\begin{frame}
-\frametitle{The rise of China's Economy}
-Advantages of Hong Kong's Economic System\\
-\bigskip
-\begin{enumerate}
-\item The complete economic policy system.
-\bigskip
-\item The high economic freedom.
-\bigskip
-\item The prosperity of finance, information, transportation, international trade.
-\bigskip 
-\end{enumerate}
 
-\end{frame}
 \subsection{Rise}
 \begin{frame}
 \frametitle{The rise of China's Economy}
@@ -402,16 +426,6 @@ An economic miracle.\\
 \end{frame}
 
 
-
-\begin{frame}
-\frametitle{The rise of China's Economy}
-The rise of economic zones like Beijing, Shanghai and    Shenzhen. \\
-\begin{figure}[h!]
-\centering
-\includegraphics[width=0.7\textwidth]{hk8.png}
-\label{threadsVsSync}
-\end{figure}
-\end{frame}
 \begin{frame}{The rise of China's Economy}
 The impact on Hong Kong's economic status\\
 \bigskip
@@ -433,6 +447,65 @@ $\Longrightarrow$ The second largest international trade country.\\
 
 
 \end{frame}
+\begin{frame}
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+\bigskip
+Shanghai financial center went to the weak
+$\Longrightarrow$ the rise of Shanghai, Beijing and Shenzhen\\
+\bigskip
+\bigskip
+\end{frame}
+
+
+\begin{frame}
+\frametitle{The rise of China's Economy}
+
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.9\textwidth]{hk8.png}
+\label{threadsVsSync}
+\end{figure}
+\end{frame}
+
+\begin{frame}{The rise of China's Economy}
+The economic autarky situation, the planned economy
+$\Longrightarrow$ The more open economy, the maket economy.\\
+\begin{figure}[h!]
+\centering
+\includegraphics[width=0.9\textwidth]{hk24.png}
+\label{threadsVsSync}
+\end{figure}
+
+\end{frame}
+\subsection{High Density}
+\begin{frame}
+\frametitle{The rise of China's Economy}
+The high economic density $\Longrightarrow$ the fast development of China.
+\\
+\bigskip
+\center{In 1978}
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk5.jpg}
+\label{threadsVsSync}
+\end{figure}
+~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Shanghai \$$3000$
+\end{frame}
+\begin{frame}
+\frametitle{The rise of China's Economy}
+\begin{figure}[h]
+\centering
+\includegraphics[width=1\textwidth]{hk25.png}
+\label{threadsVsSync}
+\end{figure}
+\end{frame}
+
 \subsection{The impact on Hong Kong's economic status}
 \begin{frame}
 \frametitle{The rise of China's Economy}
@@ -459,22 +532,24 @@ From the perspective of the institutinal reasons\\
 From the perspective of the cultural reasons.\\
 \bigskip
 \begin{itemize}
-\item The Hong Kong’s native consciousness.
+\item The rise of Hong Kong’s native consciousness.
 \bigskip
-\item The missing of British.
+\item The miss of British ruling.
 \end{itemize}
 
 
 \end{frame}
 
 \section{Conclusion}
+\subsection{con}
 \begin{frame}{Conclusion}
 
 \bigskip
 \bigskip
 
 \begin{block}{\center{Conclusion}}
-Pretend to have a conclusion.
+Now, we can draw the conclusion that the reasons which lead to the fall of Hong Kong's economy are internal cause: \alert{the economic competitiveness of Hong Kong}  
+and the external causes: \alert{the return of Hong Kong, the economic crisis and the rise of mainland China}.
 \end{block}
 \end{frame}
 \begin{frame}
