--- a/ppt2.tex
+++ b/ppt2.tex
@@ -37,7 +37,7 @@
 \begin{itemize}
 \item Introduction
 \item Internal cause
-\item External cause
+\item External causes
 \begin{enumerate}
 \item  Return of Hong Kong
 \item  Economic crisis
@@ -234,7 +234,7 @@ Confliction between Hong Kong and Mainland\\
 \end{frame}
 \subsection{Overview}
 \begin{frame}
-\title{The Influence of Economic Crisis on Hong Kong }
+\title{Economic Crisis on Hong Kong }
 \date{}
 \titlepage
 \end{frame}
